--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.9",
+    "@react-spring/web": "^10.0.0",
     "clsx": "^2.1.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-simple-star-rating": "^5.1.7",
     "use-debounce": "^10.0.4",
