--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@number-flow/react": "^0.5.9",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
     "@react-spring/web": "^10.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-simple-star-rating": "^5.1.7",
+    "tailwind-merge": "^3.3.0",
     "use-debounce": "^10.0.4",
     "zustand": "^5.0.4"
   },
@@ -27,6 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
 }
